--- a/includes/trivia.html
+++ b/includes/trivia.html
@@ -120,17 +120,17 @@
                     </div>
 
                     <div class="row toolbox-icons">
-                        <span class="fa-stack fa-2x fifty" title="50/50 - Reavel 2 wrong answers!"  data-bs-toggle="tooltip" data-bs-placement="top">
+                        <span class="fa-stack fa-2x fifty animate__animated" title="50/50 - Reavel 2 wrong answers!"  data-bs-toggle="tooltip" data-bs-placement="top">
                             <i class="fa-solid icon-back fa-circle fa-stack-2x"></i>
                             <i class="fa-solid fa-eraser fa-stack-1x fa-inverse icon-color"></i>
                           </span>
 
-                          <span class="fa-stack fa-2x show-answer" title="Get a free answer!"  data-bs-toggle="tooltip" data-bs-placement="top">
+                          <span class="fa-stack fa-2x show-answer animate__animated" title="Get a free answer!"  data-bs-toggle="tooltip" data-bs-placement="top">
                             <i class="fa-solid icon-back fa-circle fa-stack-2x"></i>
                             <i class="fa-solid fa-arrows-rotate fa-stack-1x fa-inverse icon-color"></i>
                           </span>
 
-                          <span class="fa-stack fa-2x extra-time" title="Get 10 seconds extra time!"  data-bs-toggle="tooltip" data-bs-placement="top">
+                          <span class="fa-stack fa-2x extra-time animate__animated" title="Get 10 seconds extra time!"  data-bs-toggle="tooltip" data-bs-placement="top">
                             <i class="fa-solid icon-back fa-circle fa-stack-2x"></i>
                             <i class="fa-solid fa-hourglass-end fa-stack-1x fa-inverse icon-color"></i>
                           </span>
