--- a/includes/leaderboard.html
+++ b/includes/leaderboard.html
@@ -12,6 +12,9 @@
 
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/leaderboard.css">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+
 
 </head>
 
